[package]
name = "mds-rs"
version = "0.1.8"
edition = "2024"
description = "Markdown to static HTML slideshow generator."
repository = "https://github.com/simon-danielsson/mds"
authors = ["Simon Danielsson <contact@simondanielsson.se>"]
homepage = "https://www.simondanielsson.se"
keywords = ["markdown", "html", "slideshow", "productivity"]
license = "MIT"

[[bin]]
name = "mds"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
